# code-katas-cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  gtest_main.cpp  hello_world.cpp  main.cpp
solutions/: CMakeLists.txt  buddy_pair.h  col_vec.cpp  col_vec.h  count_pos_sum_neg.h  dih4.cpp  dih4.h  hello_world.cpp  hello_world.h  xbonacci.h
tests/: CMakeLists.txt  gtest_main.cpp  test_buddy_pair.cpp  test_count_pos_sum_neg.cpp  test_dih4.cpp  test_hello_world.cpp  test_xbonacci.cpp
